# internal/transport/rest/handler/movie_details.go
@@ -62,9 +62,9 @@ func (h *Handler) GetMoviesIdDetails(c echo.Context, id apiserver.MovieId, param
 		Id:          id,
 		IsAdult:     *response.JSON200.Adult,
 		Overview:    *response.JSON200.Overview,
-		Popularity:  float64(*response.JSON200.Popularity),
+		Popularity:  *response.JSON200.Popularity,
 		Poster:      response.JSON200.PosterPath,
-		Rating:      float64(*response.JSON200.VoteAverage),
+		Rating:      *response.JSON200.VoteAverage,
 		ReleaseDate: response.JSON200.ReleaseDate,
 		Revenue:     *response.JSON200.Revenue,
 		Status:      *response.JSON200.Status,
